--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -172,6 +172,11 @@
                 Mathematical Research Institute of Oberwolfach, Germany.  J. Scott Carter's book <a href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/cartert.pdf" 
                 target="_blank"><i>How surfaces intersect in space: An introduction to topology</i></a> contains this example and many more.  
             </li>
+
+            <li>
+                Henry Segerman's <a href="https://www.thingiverse.com/henryseg/designs" target="_blank">3D printing site</a> contains a lot of interesting stuff, including 
+                the Hopf fibration.  He also wrote a <a href="http://www.3dprintmath.com/" target="_blank">book</a> about it!  
+            </li>
         </ul>
     </div> 
 </p>
