--- a/grad/index.html
+++ b/grad/index.html
@@ -159,6 +159,18 @@
     </p>
 -->
 
+<h3>Talks in Fall 2025 (mostly Tuesdays 4:20 in Lecture Hall 3, 204)</h3>
+
+    <p>
+        Oct 14, '25  
+        <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('47');">
+        <i>  TBA </i></a><br />       
+    </p>
+
+
+
+    
 <h3>Talks in Spring 2025 (mostly Fridays 4:20 in M5024)</h3>
 
 <!--
