--- a/grad/index.html
+++ b/grad/index.html
@@ -166,6 +166,9 @@
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('47');">
         <i>  TBA </i></a><br />       
+        <li>
+                <a href="25fal/0328-Li.pdf" target="_blank">Slides</a>
+            </li>
     </p>
 
 
