Update link to Slides in index.html

--- a/grad/index.html
+++ b/grad/index.html
@@ -167,7 +167,7 @@
         <a onclick="toggle_visibility('47');">
         <i>  TBA </i></a><br />       
         <li>
-                <a href="25fal/Test.pdf" target="_blank">Slides</a>
+                <a href="25fal/Stallings On fibering certain 3-manifolds.pdf" target="_blank">Slides</a>
             </li>
     </p>
 
