--- a/grad/index.html
+++ b/grad/index.html
@@ -165,7 +165,8 @@
         Oct 14, '25  
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('47');">
-        <i>  TBA </i></a><br />       
+        <i>  TBA </i></a><br />    
+             <div id="47" class="toshow" style="display:none">
         <li>
                 <a href="25fal/Stallings On fibering certain 3-manifolds.pdf" target="_blank">Slides</a>
             </li>
