--- a/grad/index.html
+++ b/grad/index.html
@@ -165,13 +165,73 @@
         Oct 14, '25  
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('47');">
-        <i>  TBA </i></a><br />   
+        <i>  TBD </i></a><br />   
          <div id="47" class="toshow" style="display:none">
             </div>
     </p>
 
+  <p>
+        Oct 21, '25  
+        <b>Wenhui Yang</b>, 
+        <a onclick="toggle_visibility('48');">
+        <i>  TBD </i></a><br />   
+         <div id="48" class="toshow" style="display:none">
+            </div>
+    </p>
 
+      <p>
+        Oct 28, '25  
+        <b>Haiyu Zhang</b>, 
+        <a onclick="toggle_visibility('49');">
+        <i>  TBD </i></a><br />   
+         <div id="49" class="toshow" style="display:none">
+            </div>
+    </p>
 
+      <p>
+        Nov 4, '25  
+        <b>Chunshuang Yin</b>, 
+        <a onclick="toggle_visibility('50');">
+        <i>  TBD </i></a><br />   
+         <div id="50" class="toshow" style="display:none">
+            </div>
+    </p>
+
+    <p>
+        Nov 11, '25  
+        <b>Xiansheng Li</b>, 
+        <a onclick="toggle_visibility('51');">
+        <i>  TBD </i></a><br />   
+         <div id="51" class="toshow" style="display:none">
+            </div>
+    </p>
+
+    <p>
+        Nov 18, '25  
+        <b>Qianyi Zhang</b>, 
+        <a onclick="toggle_visibility('52');">
+        <i>  TBD </i></a><br />   
+         <div id="52" class="toshow" style="display:none">
+            </div>
+    </p>
+
+    <p>
+        Dec 2, '25  
+        <b>Zijie Wen</b>, 
+        <a onclick="toggle_visibility('53');">
+        <i>  TBD </i></a><br />   
+         <div id="53" class="toshow" style="display:none">
+            </div>
+    </p>
+
+    <p>
+        Dec 9, '25  
+        <b>Zhou Fang</b>, 
+        <a onclick="toggle_visibility('54');">
+        <i>  TBD </i></a><br />   
+         <div id="54" class="toshow" style="display:none">
+            </div>
+    </p>
     
 <h3>Talks in Spring 2025 (mostly Fridays 4:20 in M5024)</h3>
 
