--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -232,19 +232,21 @@
     </a>
     <br />
     <div id="2" class="toshow" style="display:none">
-        
+        <li>Slides 18–39, 90–101, 201–233, and 266 from a <a href="https://yifeizhu.github.io/cmp.pdf" target="_blank">talk</a> given at the 2025 Winter Club of Mathematics and Physics Workshop</li>
+
+        <li><a href="https://yifeizhu.github.io/swallowtail/" target="_blank">More</a></li>
     </div>
 </p>
 
 <p>
-    Thu Sep 25, '25, 
+    Thu Sep 25, '25 (<b>Research Building 3</b>, <b>9th floor</b>, access the building from <b>Entrance D1</b> at ground level</b>), 
     <b>Yifei Zhu</b>, 
     <a onclick="toggle_visibility('3');">
         <i>Swallowtail (engineering)</i>
     </a>
     <br />
     <div id="3" class="toshow" style="display:none">
-        
+        The goal is to get the printers up and running.  
     </div>
 </p>
 
