--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -248,7 +248,7 @@
     </a>
     <br />
     <div id="3" class="toshow" style="display:none">
-        The goal is to get the printers up and running.  
+        Our primary goal is to get the printers up and running.  
     </div>
 </p>
 
