--- a/grad/index.html
+++ b/grad/index.html
@@ -149,8 +149,16 @@
 <h3>About</h3>
 
     <p>
-        This is a graduate-level seminar on topology and related fields.  Topics are selected from common interests of the participants.  
+        This is a graduate-level seminar on topology and related fields.  
+        <!--
+        Topics are selected from common interests of the participants.  
+        -->
         <a href="http://dx.doi.org/10.1090/noti941" target="_blank">Here</a> are some general suggestions on how to give a good talk.  
+    </p>
+
+    <p>
+        If you have any questions, suggestions, or would like to speak, please contact 
+        <a href="mailto:12331015@mail.sustech.edu.cn">Wenhui Yang</a> and <a href="mailto:12231283@mail.sustech.edu.cn">Qingrui Qu</a>.  
     </p>
 <!--
     <p>
@@ -159,7 +167,7 @@
     </p>
 -->
 
-<h3>Talks in Fall 2025 (mostly Tuesdays 4:20 in Lecture Hall 3, 204)</h3>
+<h3>Talks in Fall 2025 (Tuesdays 4:30–5:30 in Lecture Hall 3-204)</h3>
 
     <p>
         Oct 14, '25  
