--- a/grad/index.html
+++ b/grad/index.html
@@ -173,9 +173,22 @@
         Oct 14, '25  
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('47');">
-        <i>  TBD </i></a><br />   
-         <div id="47" class="toshow" style="display:none">
-            </div>
+       <i> Regular Maps: At the Crossroads of Graph Theory, Geometry, and Topology</i></a><br />
+        <div id="47" class="toshow" style="display:none">
+           This seminar will introduce the fundamental concepts of regular maps and its connections with the geometry and topology of closed surfaces. 
+            For a connected graph or multigraph, we consider its highly symmetric embeddings into closed surfaces—specifically, 
+            a regular embedding refers to a 2-cell embedding where the automorphism group acts regularly on arcs. 
+            An automorphism of a map is an automorphism of the underlying graph that extends to a self-homeomorphism of the supporting surface. 
+            The connected components of the complement of the graph on the surface are simply connected regions called the faces of the map. 
+            If we endow each face with a standard constant curvature Riemannian metric, we obtain a global geometric structure, 
+            and it becomes meaningful to study the shortest geodesic length function on the Teichmüller space near this point. 
+            These geometric structures also correspond to compatible complex structures, with examples such as elliptic curves over C with complex multiplication.
+            We will then present some classical classification results using techniques from algebraic combinatorics and group theory for certain families of highly symmetric graphs, 
+            such as the complete graph and the hypercube graph. For the hypercube graph, we further explore intriguing “chromatic” structures by studying one-parameter linear families within the regular embedding approaches.
+            The edges of the dual map naturally form a set of closed geodesics, and we investigate the homological redundancy of this set. 
+            The dimension of this redundancy appears to follow some delicate exponentially growing formulas for each linear family.
+            Finally, we will introduce a special family of regular embeddings of the hypercube graph that corresponds precisely to the real moment-angle complex studied in the context of toric variety geometry. 
+        </div>
     </p>
 
   <p>
