--- a/grad/index.html
+++ b/grad/index.html
@@ -154,6 +154,7 @@
         Topics are selected from common interests of the participants.  
         -->
         <a href="http://dx.doi.org/10.1090/noti941" target="_blank">Here</a> are some general suggestions on how to give a good talk.  
+        <a href="https://margalit.droppages.net/tsr/DosandDontsforAbstracts.pdf" target="_blank">Here</a> are some dos and don’ts for writing abstracts.  
     </p>
 
     <p>
