--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -291,7 +291,7 @@
     Thu Oct 23, '25, 
     <b>Liuyuan Chen</b> and <b>Tianlin Gao</b>, 
     <a onclick="toggle_visibility('7');">
-        <i>TBD (context and theory)</i>
+        <i>Riemann surfaces (context and theory)</i>
     </a>
     <br />
     <div id="7" class="toshow" style="display:none">
@@ -303,7 +303,7 @@
     Fri Nov 14, '25, 
     <b>Liuyuan Chen</b> and <b>Tianlin Gao</b>, 
     <a onclick="toggle_visibility('8');">
-        <i>TBD (engineering)</i>
+        <i>Riemann surfaces (engineering)</i>
     </a>
     <br />
     <div id="8" class="toshow" style="display:none">
@@ -315,7 +315,7 @@
     Thu Nov 20, '25, 
     <b>Youkang Gong</b> and <b>Qirui Huang</b>, 
     <a onclick="toggle_visibility('9');">
-        <i>TBD (context and theory)</i>
+        <i>Stereographic projection and tessellations (context and theory)</i>
     </a>
     <br />
     <div id="9" class="toshow" style="display:none">
@@ -327,7 +327,7 @@
     Fri Nov 28, '25, 
     <b>Youkang Gong</b> and <b>Qirui Huang</b>, 
     <a onclick="toggle_visibility('10');">
-        <i>TBD (engineering)</i>
+        <i>Stereographic projection and tessellations (engineering)</i>
     </a>
     <br />
     <div id="10" class="toshow" style="display:none">
@@ -339,7 +339,7 @@
     Thu Dec 4, '25, 
     <b>Yanche Wu</b> and <b>Xiuyuan Yang</b>, 
     <a onclick="toggle_visibility('11');">
-        <i>TBD (context and theory)</i>
+        <i>Poincaré homology sphere (context and theory)</i>
     </a>
     <br />
     <div id="11" class="toshow" style="display:none">
@@ -351,7 +351,7 @@
     Fri Dec 12, '25, 
     <b>Yanche Wu</b> and <b>Xiuyuan Yang</b>, 
     <a onclick="toggle_visibility('12');">
-        <i>TBD (engineering)</i>
+        <i>Poincaré homology sphere (engineering)</i>
     </a>
     <br />
     <div id="12" class="toshow" style="display:none">
