--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -255,13 +255,9 @@
 <p>
     Thu Oct 9, '25, 
     <b>Xuan Wu</b> and <b>Pujin Ye</b>, 
-    <a onclick="toggle_visibility('4');">
+    <a href="/undergrad/25fal/Wu–Ye-1.pdf" target="_blank">
         <i>Knots (context and theory)</i>
     </a>
-    <br />
-    <div id="4" class="toshow" style="display:none">
-         
-    </div>
 </p>
 
 <p>
@@ -278,13 +274,9 @@
 <p>
     Fri Oct 17, '25, 
     <b>Xuan Wu</b> and <b>Pujin Ye</b>, 
-    <a onclick="toggle_visibility('6');">
+    <a href="/undergrad/25fal/Wu–Ye-2.pdf" target="_blank">
         <i>Knots (engineering)</i>
     </a>
-    <br />
-    <div id="6" class="toshow" style="display:none">
-         
-    </div>
 </p>
 
 <p>
