--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -81,11 +81,11 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
-                        <li><a href="#A" target="_blank">About</a></li>
-                        <li><a href="#S" target="_blank">Schedule</a></li>
+                        <li><a href="#A">About</a></li>
+                        <li><a href="#S">Schedule</a></li>
                         <li><a href="#P">Previous Semesters</a></li>
-                        <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
-                        <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
+                        <li><a href="/grad" target="_blank">Graduate Seminar</a></li>
+                        <li><a href="/acts" target="_blank">Appl. Comput. Topol. Seminar</a></li>
 
                     </ul>
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
