--- a/grad/index.html
+++ b/grad/index.html
@@ -196,8 +196,13 @@
         Oct 21, '25  
         <b>Wenhui Yang</b>, 
         <a onclick="toggle_visibility('48');">
-        <i>  TBD </i></a><br />   
+        <i>From non-Hermitian systems to hyperbolic lattices  </i></a><br />   
          <div id="48" class="toshow" style="display:none">
+            In this talk, we will introduce the eigenbundles of Hamiltonians, with a specific focus on two-band non-Hermitian systems. 
+            We will then demonstrate how the framework of Higgs bundles serves as a powerful tool to clarify the hyperbolic geometry intrinsically equipped on the parameter space of such systems. 
+            This geometric understanding provides a foundation for exploring novel lattices in curved spaces, which can be used for designing advanced photonic materials, particularly in hyperbolic case. 
+            The latter part of the talk will focus on the realization of hyperbolic lattices in circuit quantum electrodynamics (cQED).
+            We will briefly introduce their mathematical modeling and discuss the unique physical properties emerging from their hyperbolic geometry.          
             </div>
     </p>
 
