--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -228,7 +228,7 @@
     Fri Sep 19, '25, 
     <b>Yifei Zhu</b>, 
     <a onclick="toggle_visibility('2');">
-        <i>Swallowtail (context and theory)</i>
+        <i>Swallowtails (context and theory)</i>
     </a>
     <br />
     <div id="2" class="toshow" style="display:none">
@@ -244,7 +244,7 @@
     Thu Sep 25, '25 (<b>Research Building 3</b>, <b>9th floor</b>, access the building from <b>Entrance D2</b> at ground level</b>), 
     <b>Yifei Zhu</b>, 
     <a onclick="toggle_visibility('3');">
-        <i>Swallowtail (engineering)</i>
+        <i>Swallowtails (engineering)</i>
     </a>
     <br />
     <div id="3" class="toshow" style="display:none">
@@ -355,7 +355,7 @@
     Thu Dec 18, '25, 
     <b>Hongli Ye</b>, 
     <a onclick="toggle_visibility('13');">
-        <i>TBD (context and theory)</i>
+        <i>Minimal surfaces (context and theory)</i>
     </a>
     <br />
     <div id="13" class="toshow" style="display:none">
@@ -367,7 +367,7 @@
     Fri Dec 26, '25, 
     <b>Hongli Ye</b>, 
     <a onclick="toggle_visibility('14');">
-        <i>TBD (engineering)</i>
+        <i>Minimal surfaces (engineering)</i>
     </a>
     <br />
     <div id="14" class="toshow" style="display:none">
