--- a/grad/index.html
+++ b/grad/index.html
@@ -202,10 +202,13 @@
 
       <p>
         Oct 28, '25  
-        <b>Haiyu Zhang</b>, 
+        <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('49');">
-        <i>  TBD </i></a><br />   
+        <i>  Some Topics in Motivic Homotopy Theory </i></a><br />   
          <div id="49" class="toshow" style="display:none">
+
+             We will explore the application of the $\rho$-Bockstein spectral sequence to computations in real motivic homotopy theory and present the construction of the motivic modular forms.
+
             </div>
     </p>
 
