--- a/grad/index.html
+++ b/grad/index.html
@@ -218,6 +218,15 @@
         <a onclick="toggle_visibility('50');">
         <i>  TBD </i></a><br />   
          <div id="50" class="toshow" style="display:none">
+             p-Divisible groups are fundamental concepts in algebraic geometry, number theory, and representation theory, serving as essential tools in deformation theory such as Lubin-Tate 
+             theory and the study of moduli spaces. This report will introduce the classical theory of p-divisible groups constructed by Tate, as well as Lurie's categorical 
+             generalization—the theory of S-divisible groups.
+
+            The first part of the talk will present Tate’s construction and classification of p-divisible groups: they are viewed as inductive systems of formal group schemes, and each p-divisible group 
+             can be associated with a connected-étale exact sequence. These two components can be described via categorical equivalences, providing a complete classification of p-divisible 
+             groups. The second part will introduce Lurie’s modern framework: starting from finite flat group schemes and their duals, we will step by step construct S-divisible groups. 
+             This definition exhibits excellent functoriality over more general base schemes, thereby generalizing Tate’s theory and opening up its applications in areas such as derived 
+             and spectral geometry.
             </div>
     </p>
 
