--- a/grad/index.html
+++ b/grad/index.html
@@ -216,8 +216,9 @@
         Nov 4, '25  
         <b>Chunshuang Yin</b>, 
         <a onclick="toggle_visibility('50');">
-        <i>  TBD </i></a><br />   
+        <i>  p-Divisible Groups: From Tate’s Classical Constructions to Lurie’s Modern Reinterpretation </i></a><br />   
          <div id="50" class="toshow" style="display:none">
+             
              p-Divisible groups are fundamental concepts in algebraic geometry, number theory, and representation theory, serving as essential tools in deformation theory such as Lubin-Tate 
              theory and the study of moduli spaces. This report will introduce the classical theory of p-divisible groups constructed by Tate, as well as Lurie's categorical 
              generalization—the theory of S-divisible groups.
@@ -227,6 +228,7 @@
              groups. The second part will introduce Lurie’s modern framework: starting from finite flat group schemes and their duals, we will step by step construct S-divisible groups. 
              This definition exhibits excellent functoriality over more general base schemes, thereby generalizing Tate’s theory and opening up its applications in areas such as derived 
              and spectral geometry.
+             
             </div>
     </p>
 
