--- a/grad/index.html
+++ b/grad/index.html
@@ -175,14 +175,13 @@
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('47');">
        <i> Regular Maps: At a Crossroads of Graph Theory, Geometry, and Topology</i></a><br />
-        <div id="47" class="toshow" style="display:none">
-           
+        <div id="47" class="toshow" style="display:none">   
             Regular maps are highly symmetric 2-cell embeddings of graphs into closed surfaces, with automorphisms acting regularly on directed 
-            edges. Endowing their faces with constant curvature metrics yields global geometric structures, corresponding to certain algebraic 
-            curves. After reviewing classical classifications of complete and hypercube graphs via algebraic combinatorics, we focus on the 
-            hypercube case. Here, one-parameter linear families of regular embeddings exhibit a natural stratification. The dual edges form a set 
-            of closed geodesics, whose "homological redundancy" we analyze. Remarkably, the dimension of this redundancy admits an explicit 
-            formula in terms of Lucas numbers, implying a growth rate related to the golden ratio—a particularly intriguing and elegant phenomenon. 
+            edges. Endowing their faces with constant curvature metrics yields global geometric structures, which correspond to particular types of complex algebraic 
+            curves. After reviewing existing classifications of complete and hypercube graphs via algebraic combinatorics, we focus on the 
+            hypercube case. Here, one-parameter linear families of regular embeddings exhibit a natural hierarchy. The dual edges form a set 
+            of closed geodesics, whose "homological redundancy" we analyze quantitatively. In particular, we discover that the dimension of this redundancy admits an explicit 
+            formula in terms of Lucas numbers, exhibiting a growth rate related to the golden ratio. 
         </div>
     </p>
 
@@ -218,10 +217,7 @@
         <a onclick="toggle_visibility('50');">
         <i>  p-Divisible Groups: From Tate’s Classical Constructions to Lurie’s Modern Reinterpretation </i></a><br />   
          <div id="50" class="toshow" style="display:none">
-             p-Divisible groups are fundamental concepts in algebraic geometry, number theory, and representation theory, serving as essential tools in deformation theory such as Lubin-Tate 
-             theory and the study of moduli spaces. This report will introduce the classical theory of p-divisible groups constructed by Tate, as well as Lurie's categorical 
-             generalization—the theory of S-divisible groups.
-
+             This report will introduce the classical theory of p-divisible groups constructed by Tate, as well as Lurie's categorical generalization—the theory of S-divisible groups.
              The first part of the talk will present Tate’s construction and classification of p-divisible groups: they are viewed as inductive systems of formal group schemes, and each p-divisible group 
              can be associated with a connected-étale exact sequence. These two components can be described via categorical equivalences, providing a complete classification of p-divisible 
              groups. The second part will introduce Lurie’s modern framework: starting from finite flat group schemes and their duals, we will step by step construct S-divisible groups. 
