--- a/grad/index.html
+++ b/grad/index.html
@@ -215,14 +215,13 @@
         Nov 4, '25  
         <b>Chunshuang Yin</b>, 
         <a onclick="toggle_visibility('50');">
-        <i>  p-Divisible Groups: From Tate’s Classical Constructions to Lurie’s Modern Reinterpretation </i></a><br />   
+        <i>  p-Divisible Groups: From Tate’s Classical Constructions to Lurie’s Modern Generalization </i></a><br />   
          <div id="50" class="toshow" style="display:none">
-             This report will introduce the classical theory of p-divisible groups constructed by Tate, as well as Lurie's categorical generalization—the theory of S-divisible groups.
-             The first part of the talk will present Tate’s construction and classification of p-divisible groups: they are viewed as inductive systems of formal group schemes, and each p-divisible group 
-             can be associated with a connected-étale exact sequence. These two components can be described via categorical equivalences, providing a complete classification of p-divisible 
-             groups. The second part will introduce Lurie’s modern framework: starting from finite flat group schemes and their duals, we will step by step construct S-divisible groups. 
-             This definition exhibits excellent functoriality over more general base schemes, thereby generalizing Tate’s theory and opening up its applications in areas such as derived 
-             and spectral geometry.
+             In this talk, we will introduce the classical theory of $p$-divisible groups constructed by Tate, as well as Lurie’s categorical generalization of S-divisible 
+             groups. In the first part, we will present Tate’s construction of $p$-divisible groups. They are viewed as inductive systems of finite group schemes, and each 
+             $p$-divisible group is associated with a connected–étale sequence. The second part will focus on Lurie’s modern framework: starting with finite flat group schemes
+             over an arbitrary $E_\infty$-ring , we will step by step construct spectral S-divisible groups. This definition exhibits excellent functoriality over more general
+             base schemes, thereby generalizing Tate’s theory to the setting of spectral algebraic geometry.
             </div>
     </p>
 
