Refine talk descriptions in index.html
Updated the descriptions of talks, improving clarity and detail.

--- a/grad/index.html
+++ b/grad/index.html
@@ -194,7 +194,7 @@
             In this talk, we will introduce the eigenbundles of Hamiltonians, with a specific focus on two-band non-Hermitian systems. 
             We will then demonstrate how the framework of Higgs bundles serves as a powerful tool to clarify the hyperbolic geometry intrinsically equipped on the parameter space of such systems. 
             This geometric understanding provides a foundation for exploring novel lattices in curved spaces, which can be used for designing advanced photonic materials, particularly in hyperbolic case. 
-            The latter part of the talk will focus on the realization of hyperbolic lattices in circuit quantum electrodynamics (cQED).
+            The latter part of the talk will focus on the realization of hyperbolic lattices in circuit quantum electrodynamics.
             We will briefly introduce their mathematical modeling and discuss the unique physical properties emerging from their hyperbolic geometry.          
             </div>
     </p>
@@ -215,13 +215,14 @@
         Nov 4, '25  
         <b>Chunshuang Yin</b>, 
         <a onclick="toggle_visibility('50');">
-        <i>  p-Divisible Groups: From Tate’s Classical Constructions to Lurie’s Modern Generalization </i></a><br />   
+        <i> $p$-Divisible Groups: From Tate’s Classical Constructions to Lurie’s Modern Generalization</i></a><br />   
          <div id="50" class="toshow" style="display:none">
-             In this talk, we will introduce the classical theory of $p$-divisible groups constructed by Tate, as well as Lurie’s categorical generalization of S-divisible 
-             groups. In the first part, we will present Tate’s construction of $p$-divisible groups. They are viewed as inductive systems of finite group schemes, and each 
-             $p$-divisible group is associated with a connected–étale sequence. The second part will focus on Lurie’s modern framework: starting with finite flat group schemes
-             over an arbitrary $E_\infty$-ring , we will step by step construct spectral S-divisible groups. This definition exhibits excellent functoriality over more general
-             base schemes, thereby generalizing Tate’s theory to the setting of spectral algebraic geometry.
+In this talk, we will introduce the classical theory of $p$-divisible groups constructed by Tate, as well as Lurie’s categorical generalization of S-divisible groups.
+             In the first part, we will present Tate’s construction of $p$-divisible groups. They are viewed as inductive systems of finite group schemes, 
+             and each $p$-divisible group is associated with a connected–étale sequence. 
+             The second part will focus on Lurie’s modern framework: starting with finite flat group schemes over an arbitrary $E_\infty$-ring , 
+             we will step by step construct spectral S-divisible groups. This definition exhibits excellent functoriality over more general base schemes, 
+             thereby generalizing Tate’s theory to the setting of spectral algebraic geometry.
             </div>
     </p>
 
@@ -229,8 +230,13 @@
         Nov 11, '25  
         <b>Xiansheng Li</b>, 
         <a onclick="toggle_visibility('51');">
-        <i>  TBD </i></a><br />   
+        <i>  The Art of Gluing: Localizations and Completions in Geometry.</i></a><br />   
          <div id="51" class="toshow" style="display:none">
+              In this talk, I will give a gentle introduction to localizations and completions in algebraic geometry, providing archetypal examples. 
+             For a geometric object with a closed-open decomposition, the category of quasi-coherent sheaves "splits" into parts; 
+             each part can be thought of as a restriction to the corresponding locus. Locally, in the affine case, these parts are identified with the localization and completion of modules over certain rings. 
+             Moreover, one can reconstruct the entire category from these parts using data on the "overlap". 
+             This discussion will naturally lead to the notion of a stable recollement, which, in fact, fits into the highly general framework of Grothendieck's six operations.
             </div>
     </p>
 
