--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -282,25 +282,17 @@
 <p>
     Thu Oct 23, '25, 
     <b>Liuyuan Chen</b> and <b>Tianlin Gao</b>, 
-    <a onclick="toggle_visibility('7');">
+    <a href="/undergrad/25fal/Chen–Gao-1.pdf" target="_blank">
         <i>Riemann surfaces (context and theory)</i>
     </a>
-    <br />
-    <div id="7" class="toshow" style="display:none">
-        
-    </div>
 </p>
 
 <p>
     Fri Nov 14, '25, 
     <b>Liuyuan Chen</b> and <b>Tianlin Gao</b>, 
-    <a onclick="toggle_visibility('8');">
+    <a href="/undergrad/25fal/Chen–Gao-2.pdf" target="_blank">
         <i>Riemann surfaces (engineering)</i>
     </a>
-    <br />
-    <div id="8" class="toshow" style="display:none">
-         
-    </div>
 </p>
 
 <p>
