--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -248,7 +248,9 @@
     </a>
     <br />
     <div id="3" class="toshow" style="display:none">
-        Our primary goal is to get the printers up and running.  
+        <i>Our primary goal is to get the printers up and running.</i>
+
+        <i>A preliminrary <a href="/undergrad/25fal/sw4.jpg" target="_blank">model</a> created by Qingrui Qu</i>
     </div>
 </p>
 
