--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -248,9 +248,11 @@
     </a>
     <br />
     <div id="3" class="toshow" style="display:none">
-        <i>Our primary goal is to get the printers up and running.</i>
+        <ul>
+            <li>Our primary goal is to get the printers up and running.</li>
 
-        <i>A raw <a href="/undergrad/25fal/sw4.jpg" target="_blank">model</a> created by Qingrui Qu</i>
+            <li>A raw <a href="/undergrad/25fal/sw4.jpg" target="_blank">model</a> created by Qingrui Qu</li>
+        </ul>
     </div>
 </p>
 
