--- a/grad/index.html
+++ b/grad/index.html
@@ -246,8 +246,15 @@ In this talk, we will introduce the classical theory of $p$-divisible groups con
         Dec 2, '25  
         <b>Zijie Wen</b>, 
         <a onclick="toggle_visibility('52');">
-        <i>  TBD </i></a><br />   
+        <i>  Limit, stability and representation: From Limit of homology groups to Representation Stability </i></a><br />   
          <div id="52" class="toshow" style="display:none">
+             In this talk, I will give a gentle introduction to representation stability.    
+             Our central question is: what patterns emerge in the representation theory of an algebraic object as its “size” tends to infinity?
+             To systematically understand and prove such phenomena, we will introduce a framework: the theory of FI-modules and FS^{op}-modules. 
+             Finally, we will apply this framework to a classic and important setting: the cohomology of the Deligne-Mumford compactification $\bar{M}_g$ of the moduli space of curves.   
+             Representation stability provides a powerful lens to view the behavior of the cohomology groups $H_i(\bar{M}_g; \mathbb{Q})$ as the genus $g$ increases, 
+             for instance, $\mathrm{Ind}_N \mathrm{Res}_N H_i(M_{g, -}, \mathbb{Q}) \to H_i(M_{g, -}, \mathbb{Q})$ is an isomorphism as an FI-module for some $N \in \mathbb N$,
+             which $g,i$ is a fixed positive integer and $M_{g, -}$ is Deligne-Mumford moduli space.
             </div>
     </p>
 
