--- a/grad/index.html
+++ b/grad/index.html
@@ -257,7 +257,7 @@ In this talk, we will introduce the classical theory of $p$-divisible groups con
              for instance, $\mathrm{Ind}_N \mathrm{Res}_N H_i(M_{g, -}, \mathbb{Q}) \to H_i(M_{g, -}, \mathbb{Q})$ is an isomorphism as an FI-module for some $N \in \mathbb N$,
              which $g,i$ is a fixed positive integer and $M_{g, -}$ is Deligne-Mumford moduli space.   
              </li>
-             <li> <a href="https://wen-uniqueness.github.io/homological_stability-Homological-stability-and-representation-stability/" target="_blank">Slides</a></li>
+             <li> <a href="https://wen-uniqueness.github.io/homological_stability-Homological-stability-and-representation-stability/" target="_blank">Notes</a></li>
             </div>
     </p>
 
@@ -265,8 +265,15 @@ In this talk, we will introduce the classical theory of $p$-divisible groups con
         Dec 9, '25  
         <b>Zhou Fang</b>, 
         <a onclick="toggle_visibility('53');">
-        <i>  TBD </i></a><br />   
+        <i> John Jones's construction of a manifold in dimension 30 with the Kervaire invariant one </i></a><br />   
          <div id="53" class="toshow" style="display:none">
+              <li>
+                  It has been proved that if a framed manifold $M$ has Kervaire invariant one, then dim M = 2,6,14,30,62,126. While the cases for 2, 6, and 14 are easy, dimensions 62 and 126 remain open.
+                  In this talk, I will introduce the explicit construction of a framed manifold of dimension 30 with Kervaire invariant one, constructed by John D.S. Jones in the reference.
+                  I will first introduce the Kervaire invariant and then provide the technical details of the construction, which utilize various tools, including the Stiefel-Whitney class, 
+                  explicit models of classifying spaces, induced maps between classifying spaces, and other relevant concepts.
+             </li>
+             <li> <a href="https://JoZhouFang.github.io/file/Kervaire_inv.pdf" target="_blank">Notes</a></li>  
             </div>
     </p>
 
