--- a/grad/index.html
+++ b/grad/index.html
@@ -273,6 +273,9 @@ In this talk, we will introduce the classical theory of $p$-divisible groups con
                   I will first introduce the Kervaire invariant and then provide the technical details of the construction, which utilize various tools, including the Stiefel-Whitney class, 
                   explicit models of classifying spaces, induced maps between classifying spaces, and other relevant concepts.
              </li>
+             <li>
+                Main reference: John D.S. Jones,
+                <a href="https://doi.org/10.1016/0040-9383(78)90029-0" target="_blank"><i>The Kervaire invariant of extended power manifolds</i></a> 
              <li> <a href="https://JoZhouFang.github.io/file/Kervaire_inv.pdf" target="_blank">Notes</a></li>  
             </div>
     </p>
