--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -155,7 +155,8 @@
 -->
 <p>
     This is an undergraduate student seminar on geometry and topology.  <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for you to get an 
-    idea of how it runs and particularly for those of you who wish to register for credit.  
+    idea of how it runs and particularly for those of you who wish to register for credit.  If you would like to propose a topic in geometry and topology for now or the 
+    future, write to <a href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  
 </p>
 
 <p>
@@ -258,7 +259,7 @@
 
 <p>
     Thu Oct 9, '25, 
-    <b>Xuan Wu</b> and <b>Pujin Ye</b>, 
+    <b>Xuan Wu</b> and Pujin Ye, 
     <a href="/undergrad/25fal/Wu–Ye-1.pdf" target="_blank">
         <i>Knots (context and theory)</i>
     </a>
@@ -277,7 +278,7 @@
 
 <p>
     Fri Oct 17, '25, 
-    <b>Xuan Wu</b> and <b>Pujin Ye</b>, 
+    Xuan Wu and <b>Pujin Ye</b>, 
     <a href="/undergrad/25fal/Wu–Ye-2.pdf" target="_blank">
         <i>Knots (engineering)</i>
     </a>
@@ -285,7 +286,7 @@
 
 <p>
     Thu Oct 23, '25, 
-    <b>Liuyuan Chen</b> and <b>Tianlin Gao</b>, 
+    <b>Liuyuan Chen</b> and Tianlin Gao, 
     <a href="/undergrad/25fal/Chen–Gao-1.pdf" target="_blank">
         <i>Riemann surfaces (context and theory)</i>
     </a>
@@ -293,7 +294,7 @@
 
 <p>
     Fri Nov 14, '25, 
-    <b>Liuyuan Chen</b> and <b>Tianlin Gao</b>, 
+    Liuyuan Chen and <b>Tianlin Gao</b>, 
     <a href="/undergrad/25fal/Chen–Gao-2.pdf" target="_blank">
         <i>Riemann surfaces (engineering)</i>
     </a>
@@ -301,7 +302,7 @@
 
 <p>
     Thu Nov 20, '25, 
-    <b>Youkang Gong</b> and <b>Qirui Huang</b>, 
+    Youkang Gong and <b>Qirui Huang</b>, 
     <a onclick="toggle_visibility('9');">
         <i>Stereographic projection and tessellations (context and theory)</i>
     </a>
@@ -313,7 +314,7 @@
 
 <p>
     Fri Nov 28, '25, 
-    <b>Youkang Gong</b> and <b>Qirui Huang</b>, 
+    <b>Youkang Gong</b> and Qirui Huang, 
     <a onclick="toggle_visibility('10');">
         <i>Stereographic projection and tessellations (engineering)</i>
     </a>
@@ -326,25 +327,13 @@
 <p>
     Thu Dec 4, '25, 
     <b>Yanche Wu</b> and <b>Xiuyuan Yang</b>, 
-    <a onclick="toggle_visibility('11');">
-        <i>Poincaré homology sphere (context and theory)</i>
-    </a>
-    <br />
-    <div id="11" class="toshow" style="display:none">
-         
-    </div>
+    <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere (context and theory)</i></a>, up to p. 27.  
 </p>
 
 <p>
     Fri Dec 12, '25, 
-    <b>Yanche Wu</b> and <b>Xiuyuan Yang</b>, 
-    <a onclick="toggle_visibility('12');">
-        <i>Poincaré homology sphere (engineering)</i>
-    </a>
-    <br />
-    <div id="12" class="toshow" style="display:none">
-         
-    </div>
+    Yanche Wu and <b>Xiuyuan Yang</b>, 
+    <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere (engineering)</i></a>, p. 28 onwards.  
 </p>
 
 <p>
