--- a/grad/index.html
+++ b/grad/index.html
@@ -284,8 +284,21 @@ In this talk, we will introduce the classical theory of $p$-divisible groups con
         Dec 16, '25  
         <b>Qianyi Zhang</b>, 
         <a onclick="toggle_visibility('54');">
-        <i>  TBD </i></a><br />   
+        <i> Obstructions to algebraizing topological vector bundles</i></a><br />   
          <div id="54" class="toshow" style="display:none">
+             In 1955, Serre published FAC, establishing the correspondence between vector bundles and modules. 
+             Our topic—obstructions to algebraizing topological vector bundles concerns the connection between modules and vector bundles, 
+             or more specifically, between finitely generated projective modules over quotient rings of complex polynomial ring( we call them algebraic vector bundles) and topological vector bundles.
+             The problem of algebraizing topological vector bundles can be considered by the canonical map from algebraic vector bundles to analytic vector bundles and to topological vector bundles.
+             Concretely, a topological vector bundle is algebraizable if it is in the image of this map. 
+             A necessary condition of algebraizing is that the Chern classes of the topological vector bundle must be algebraic,
+             i.e. they are images of the cycle class map. Kumar, Murthy and Swan showed that below three dimensions, 
+             Chern classes are algebraic is enough to guarantee algebraizing. 
+             But necessary and sufficient conditions in higher dimensions remained unknown for a long time. 
+             In 2019, Asok, Fasel, and Hopkins have made a breakthrough. Using Steenrod algebra on Chow groups developed by Brosnan, 
+             they illustrate necessary and sufficient conditions for algebraizing topological vector bundles
+             when rank two and dimension four and successfully gave a counterexample where Chern classes are algebraic but the vector bundle cannot be algebraizing.
+             In this talk, I will introduce their work and talk about what I have learned in order to read this paper.
             </div>
     </p>
     
