--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -276,13 +276,13 @@
 
 <p>Fri Nov 14, '25, Liuyuan Chen and <b>Tianlin Gao</b>, <a href="/undergrad/25fal/Chen–Gao-2.pdf" target="_blank"><i>Riemann surfaces (engineering)</i></a></p>
 
-<p>Thu Nov 20, '25, Youkang Gong and <b>Qirui Huang</b>, <i>Stereographic projection and tessellations (context and theory)</i></p>
+<p>Thu Nov 20, '25, Youkang Gong and <b>Qirui Huang</b>, <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Stereographic projection and tessellations (context and theory)</i></a></p>
 
 <p>Fri Nov 28, '25, <b>Youkang Gong</b> and Qirui Huang, <i>Stereographic projection and tessellations (engineering)</i></p>
 
-<p>Thu Dec 4, '25, <b>Yanche Wu</b> and <b>Xiuyuan Yang</b>, <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere (context and theory)</i></a>, up to p. 27.</p>
+<p>Thu Dec 4, '25, <b>Yanche Wu</b> and <b>Xiuyuan Yang</b>, <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere</i></a> (context and theory, up to p. 27)</p>
 
-<p>Fri Dec 12, '25, Yanche Wu and <b>Xiuyuan Yang</b>, <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere (engineering)</i></a>, p. 28 onwards.</p>
+<p>Fri Dec 12, '25, Yanche Wu and <b>Xiuyuan Yang</b>, <a href="/undergrad/25fal/Yang–Wu.pdf" target="_blank"><i>Poincaré homology sphere</i></a> (engineering, p. 28 onwards)</p>
 
 <p>Thu Dec 18, '25, <b>Hongli Ye</b>, <i>Minimal surfaces (context and theory)</i></p>
 
